fix navigation gap on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -599,6 +599,10 @@ p{
   margin-right: auto;
 }
 
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
 .flex{
   display: flex;
 }
@@ -611,16 +615,16 @@ p{
   justify-content: center;
 }
 
-.gap-6{
-  gap: 1.5rem;
+.gap-3{
+  gap: 0.75rem;
 }
 
 .gap-2{
   gap: 0.5rem;
 }
 
-.gap-1{
-  gap: 0.25rem;
+.gap-4{
+  gap: 1rem;
 }
 
 .border-y{
@@ -686,18 +690,9 @@ p{
   font-weight: 700;
 }
 
-.text-\[\#50d71e\]{
+.text-\[\#009EDC\]{
   --tw-text-opacity: 1;
-  color: rgb(80 215 30 / var(--tw-text-opacity));
-}
-
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\#\#0a66c2\]{
-  color: ##0a66c2;
+  color: rgb(0 158 220 / var(--tw-text-opacity));
 }
 
 .text-\[\#0a66c2\]{
@@ -710,9 +705,9 @@ p{
   color: rgb(39 167 231 / var(--tw-text-opacity));
 }
 
-.text-\[\#009EDC\]{
+.text-white{
   --tw-text-opacity: 1;
-  color: rgb(0 158 220 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 /* Rest of your CSS code */
@@ -754,14 +749,6 @@ p{
 }
 
 @media (min-width: 640px){
-  .sm\:gap-1{
-    gap: 0.25rem;
-  }
-
-  .sm\:gap-2{
-    gap: 0.5rem;
-  }
-
   .sm\:gap-6{
     gap: 1.5rem;
   }
